sign up panel gui implemented

--- a/XamarinTest/MainPage.xaml
+++ b/XamarinTest/MainPage.xaml
@@ -14,7 +14,7 @@
                 </Frame>
             </StackLayout>
             
-            <StackLayout Margin="15,120,10,0">
+            <StackLayout Margin="15,120,15,0">
                 <Frame BackgroundColor="White" HeightRequest="500" CornerRadius="30" HasShadow="True" HorizontalOptions="FillAndExpand">
                     <StackLayout>
                         <StackLayout>
@@ -35,7 +35,7 @@
                             <Button Margin ="50,30,50,0" HeightRequest="60" CornerRadius="30" BackgroundColor="DodgerBlue" Text="Login" TextColor="White" FontSize="20" FontAttributes="Bold" FontFamily="Cambria"/>
                         </StackLayout>
                         <StackLayout Margin="50,10,50,0" Orientation="Horizontal">
-                            <Button HorizontalOptions="StartAndExpand" WidthRequest="150" HeightRequest="60" CornerRadius="30" BackgroundColor="DodgerBlue" Text="Sign up" TextColor="White" FontSize="20" FontAttributes="Bold" FontFamily="Cambria"/>
+                            <Button HorizontalOptions="StartAndExpand" WidthRequest="150" HeightRequest="60" CornerRadius="30" BackgroundColor="DodgerBlue" Text="Sign up" TextColor="White" FontSize="20" FontAttributes="Bold" FontFamily="Cambria" Clicked="SignUpClicked"/>
                             <Button HorizontalOptions="EndAndExpand" WidthRequest="150" HeightRequest="60" CornerRadius="30" BackgroundColor="DodgerBlue" Text="Exit" TextColor="White" FontSize="20" FontAttributes="Bold" FontFamily="Cambria"/>
                         </StackLayout>
                     </StackLayout>
