--- a/XamarinTest/SignUpPage.xaml
+++ b/XamarinTest/SignUpPage.xaml
@@ -6,32 +6,32 @@
         <Grid>
 
             <StackLayout Padding="0" Margin="0">
-                <Frame BackgroundColor="DodgerBlue" HorizontalOptions="FillAndExpand" HeightRequest="150" CornerRadius="0">
-                    <Label Text="TASK MANAGER" FontFamily="Cambria" FontSize="27" FontAttributes="Bold" TextColor="White" HorizontalTextAlignment="Center" Margin="0,25,0,0"/>
+                <Frame BackgroundColor="DodgerBlue" HorizontalOptions="FillAndExpand" HeightRequest="100" CornerRadius="0">
+                    <Label Text="TASK MANAGER" FontFamily="Cambria" FontSize="27" FontAttributes="Bold" TextColor="White" HorizontalTextAlignment="Center" VerticalTextAlignment="Start" Margin="0,5,0,0"/>
                 </Frame>
             </StackLayout>
 
-            <StackLayout Margin="15,120,15,0">
-                <Frame BackgroundColor="White" HeightRequest="650" CornerRadius="30" HasShadow="True" HorizontalOptions="FillAndExpand">
+            <StackLayout Margin="15,100,15,0">
+                <Frame BackgroundColor="White" HeightRequest="575" CornerRadius="30" HasShadow="True" HorizontalOptions="FillAndExpand">
                     <StackLayout>
                         <StackLayout>
                             <Label Text="SIGN UP" FontFamily="Cambria" FontSize="27" FontAttributes="Bold" TextColor="Black" HorizontalTextAlignment="Center" Margin="0,20,0,0"/>
                         </StackLayout>
                         <StackLayout Margin="0,30,0,0">
                             <Frame BackgroundColor="White" BorderColor="Black" CornerRadius="40" HorizontalOptions="FillAndExpand" HeightRequest="35">
-                                <Entry Placeholder="First Name" TextColor="DodgerBlue" HorizontalOptions="FillAndExpand" FontSize="16"/>
+                                <Entry Placeholder="First Name" TextColor="DodgerBlue" HorizontalOptions="FillAndExpand" FontSize="13"/>
                             </Frame>
                             <StackLayout Margin="0,15,0,0">
                                 <Frame BackgroundColor="White" BorderColor="Black" CornerRadius="40" HorizontalOptions="FillAndExpand" HeightRequest="35">
-                                    <Entry Placeholder="Last Name" TextColor="DodgerBlue" HorizontalOptions="FillAndExpand" FontSize="16"/>
+                                    <Entry Placeholder="Last Name" TextColor="DodgerBlue" HorizontalOptions="FillAndExpand" FontSize="13"/>
                                 </Frame>
                                 <StackLayout Margin="0,15,0,0">
                                     <Frame BackgroundColor="White" BorderColor="Black" CornerRadius="40" HorizontalOptions="FillAndExpand" HeightRequest="35">
-                                        <Entry Placeholder="Login" TextColor="DodgerBlue" HorizontalOptions="FillAndExpand" FontSize="16"/>
+                                        <Entry Placeholder="Login" TextColor="DodgerBlue" HorizontalOptions="FillAndExpand" FontSize="13"/>
                                     </Frame>
                                     <StackLayout Margin="0,15,0,0">
                                         <Frame BackgroundColor="White" BorderColor="Black" CornerRadius="40" HorizontalOptions="FillAndExpand" HeightRequest="35">
-                                            <Entry Placeholder="Password" IsPassword="True" TextColor="DodgerBlue" HorizontalOptions="FillAndExpand" FontSize="16"/>
+                                            <Entry Placeholder="Password" IsPassword="True" TextColor="DodgerBlue" HorizontalOptions="FillAndExpand" FontSize="13"/>
                                         </Frame>
 
                                     </StackLayout>
@@ -41,10 +41,6 @@
                         </StackLayout>
                         <StackLayout>
                             <Button Margin ="50,30,50,0" HeightRequest="60" CornerRadius="30" BackgroundColor="DodgerBlue" Text="Register" TextColor="White" FontSize="20" FontAttributes="Bold" FontFamily="Cambria"/>
-                        </StackLayout>
-                        <StackLayout Margin="50,10,50,0" Orientation="Horizontal">
-                            <Button HorizontalOptions="StartAndExpand" WidthRequest="150" HeightRequest="60" CornerRadius="30" BackgroundColor="DodgerBlue" Text="Back" TextColor="White" FontSize="20" FontAttributes="Bold" FontFamily="Cambria" Clicked="BackClicked"/>
-                            <Button HorizontalOptions="EndAndExpand" WidthRequest="150" HeightRequest="60" CornerRadius="30" BackgroundColor="DodgerBlue" Text="Exit" TextColor="White" FontSize="20" FontAttributes="Bold" FontFamily="Cambria"/>
                         </StackLayout>
                     </StackLayout>
 
