--- a/XamarinTest/MainPage.xaml
+++ b/XamarinTest/MainPage.xaml
@@ -32,7 +32,7 @@
                         </StackLayout>
                         </StackLayout>
                         <StackLayout>
-                            <Button Margin ="50,30,50,0" HeightRequest="60" CornerRadius="30" BackgroundColor="DodgerBlue" Text="Login" TextColor="White" FontSize="20" FontAttributes="Bold" FontFamily="Cambria"/>
+                            <Button Margin ="50,30,50,0" HeightRequest="60" CornerRadius="30" BackgroundColor="DodgerBlue" Text="Login" TextColor="White" FontSize="20" FontAttributes="Bold" FontFamily="Cambria" Clicked="LoginClicked"/>
                         </StackLayout>
                         <StackLayout>
                             <Button Margin="50,10,50,0" HeightRequest="60" CornerRadius="30" BackgroundColor="DodgerBlue" Text="Sign up" TextColor="White" FontSize="20" FontAttributes="Bold" FontFamily="Cambria" Clicked="SignUpClicked"/>
