Adjusted apperance of edit and delete buttons.

--- a/XamarinTest/TaskPage.xaml
+++ b/XamarinTest/TaskPage.xaml
@@ -35,8 +35,8 @@
 
                                                 <Label Text="{Binding Id}" VerticalTextAlignment="Center" Margin="10,0,0,10" Grid.Column="0" />
                                                 <Label Text="{Binding Description}" VerticalTextAlignment="Center" Margin="10,0,0,10" Grid.Column="1" />
-                                                <Button Text="Edit" Clicked="EditButtonClicked" Margin="0,0,10,10" WidthRequest="60" Grid.Column="2" HorizontalOptions="End" />
-                                                <Button Text="Delete" Clicked="DeleteButtonClicked" Margin="0,0,10,10" WidthRequest="60" Grid.Column="3" HorizontalOptions="End" />
+                                                <Button Text="Edit" Clicked="EditButtonClicked" WidthRequest="60" Grid.Column="2" HorizontalOptions="End" VerticalOptions="Center" FontSize="10"/>
+                                                <Button Text="Delete" Clicked="DeleteButtonClicked" WidthRequest="60" Grid.Column="3" HorizontalOptions="End" VerticalOptions="Center" FontSize="10"/>
                                             </Grid>
                                         </ViewCell>
                                     </DataTemplate>
