--- a/XamarinTest/AddTaskPage.xaml
+++ b/XamarinTest/AddTaskPage.xaml
@@ -12,7 +12,7 @@
             </StackLayout>
 
             <StackLayout Margin="15,100,15,0">
-                <Frame BackgroundColor="White" HeightRequest="300" CornerRadius="30" HasShadow="True" HorizontalOptions="FillAndExpand">
+                <Frame BackgroundColor="White" HeightRequest="600" CornerRadius="30" HasShadow="True" HorizontalOptions="FillAndExpand">
                     <StackLayout>
                         <StackLayout>
                             <Label Text="ADD TASKS" FontFamily="Cambria" FontSize="27" FontAttributes="Bold" TextColor="Black" HorizontalTextAlignment="Center" Margin="0,20,0,0"/>
@@ -24,7 +24,10 @@
                                 </Frame>
                             </StackLayout>
                             <StackLayout>
-                                <Button Margin ="50,30,50,0" HeightRequest="60" CornerRadius="30" BackgroundColor="DodgerBlue" Text="Add task" TextColor="White" FontSize="20" FontAttributes="Bold" FontFamily="Cambria" Clicked="AddTaskClicked"/>
+                                <Label Text="Select the end time for the task" FontAttributes="Bold" FontSize="18" HorizontalOptions="Center" Margin="0,30,0,30" />
+                                <DatePicker x:Name="datePicker"/>
+                                <TimePicker x:Name="timePicker"/>
+                                <Button Margin ="50,50,50,0" HeightRequest="60" CornerRadius="30" BackgroundColor="DodgerBlue" Text="Add task" TextColor="White" FontSize="20" FontAttributes="Bold" FontFamily="Cambria" Clicked="AddTaskClicked"/>
                             </StackLayout>
                         </StackLayout>
                     </StackLayout>
