--- a/XamarinTest/TaskPage.xaml
+++ b/XamarinTest/TaskPage.xaml
@@ -21,7 +21,7 @@
                             <Label x:Name="NoTasksLabel" Text="No tasks added!" IsVisible="false" HorizontalTextAlignment="Center" FontSize="22" Margin="0,50,0,0"/>
                          </StackLayout>
                             <StackLayout>
-                            <ListView x:Name="listView" Margin="0,30,0,0">
+                            <ListView x:Name="listView" Margin="0,30,0,0" ItemTapped="ListViewItemTapped">
                                 <ListView.ItemTemplate>
                                     <DataTemplate>
                                         <ViewCell>
