--- a/XamarinTest/TaskPage.xaml
+++ b/XamarinTest/TaskPage.xaml
@@ -21,7 +21,16 @@
                             <Label x:Name="NoTasksLabel" Text="No tasks added!" IsVisible="false" HorizontalTextAlignment="Center" FontSize="22" Margin="0,50,0,0"/>
                          </StackLayout>
                             <StackLayout>
-                            <ListView x:Name="listView" Margin="0,30,0,0" ItemTapped="ListViewItemTapped">
+                            <ListView x:Name="listView" Margin="0,30,0,0" IsGroupingEnabled="True" GroupDisplayBinding="{Binding Key, StringFormat='{}{0:dd.MM.yyyy}'}">
+                                <ListView.GroupHeaderTemplate>
+                                    <DataTemplate>
+                                        <ViewCell>
+                                            <Frame CornerRadius="10" Padding="5" BackgroundColor="LightGray" Margin="0,15,0,0" HorizontalOptions="StartAndExpand">
+                                                <Label Text="{Binding Key, StringFormat='{}{0:dd.MM.yyyy}'}" FontAttributes="Bold" BackgroundColor="LightGray" Padding="10" HorizontalTextAlignment="Center"/>
+                                            </Frame>
+                                            </ViewCell>
+                                    </DataTemplate>
+                                </ListView.GroupHeaderTemplate>
                                 <ListView.ItemTemplate>
                                     <DataTemplate>
                                         <ViewCell>
@@ -32,14 +41,24 @@
                                                     <ColumnDefinition Width="Auto" />
                                                     <ColumnDefinition Width="Auto" />
                                                 </Grid.ColumnDefinitions>
-                                                <Label Text="{Binding Description}" VerticalTextAlignment="Center" Margin="10,0,0,10" Grid.Column="1" />
+                                                <StackLayout Grid.Column="1">
+                                                    <Label Text="{Binding Description}" VerticalTextAlignment="Center" Margin="0,10,0,0" />
+                                                    <StackLayout Orientation="Horizontal">
+                                                        <Label Text="Finish at:" FontSize="10" TextColor="Gray" />
+                                                        <Label Text="{Binding FinishDateTask, StringFormat='{0:H:mm}'}" FontSize="10" TextColor="Gray" />
+                                                    </StackLayout>
+                                                </StackLayout>
                                                 <Button Text="Edit" Clicked="EditButtonClicked" WidthRequest="60" Grid.Column="2" HorizontalOptions="End" VerticalOptions="Center" FontSize="10"/>
                                                 <Button Text="Delete" Clicked="DeleteButtonClicked" WidthRequest="60" Grid.Column="3" HorizontalOptions="End" VerticalOptions="Center" FontSize="10"/>
                                             </Grid>
                                         </ViewCell>
                                     </DataTemplate>
                                 </ListView.ItemTemplate>
+
+
+
                             </ListView>
+
                         </StackLayout>
                     </StackLayout>
                 </Frame>
