--- a/XamarinTest/TaskPage.xaml
+++ b/XamarinTest/TaskPage.xaml
@@ -21,14 +21,12 @@
                             <Label x:Name="NoTasksLabel" Text="No tasks added!" IsVisible="false" HorizontalTextAlignment="Center" FontSize="22" Margin="0,50,0,0"/>
                          </StackLayout>
                             <StackLayout>
-                            <ListView x:Name="listView" Margin="0,30,0,0" IsGroupingEnabled="True" GroupDisplayBinding="{Binding Key, StringFormat='{}{0:dd.MM.yyyy}'}">
+                            <ListView x:Name="listView" IsGroupingEnabled="True" GroupDisplayBinding="{Binding Key, StringFormat='{}{0:dd.MM.yyyy}'}">
                                 <ListView.GroupHeaderTemplate>
                                     <DataTemplate>
                                         <ViewCell>
-                                            <Frame CornerRadius="10" Padding="5" BackgroundColor="LightGray" Margin="0,15,0,0" HorizontalOptions="StartAndExpand">
-                                                <Label Text="{Binding Key, StringFormat='{}{0:dd.MM.yyyy}'}" FontAttributes="Bold" BackgroundColor="LightGray" Padding="10" HorizontalTextAlignment="Center"/>
-                                            </Frame>
-                                            </ViewCell>
+                                            <Label Text="{Binding Key, StringFormat='{}{0:dd.MM.yyyy}'}" TextColor="Black" FontAttributes="Bold" Padding="10" Margin="0,5,0,0"/>
+                                        </ViewCell>
                                     </DataTemplate>
                                 </ListView.GroupHeaderTemplate>
                                 <ListView.ItemTemplate>
@@ -42,7 +40,7 @@
                                                     <ColumnDefinition Width="Auto" />
                                                 </Grid.ColumnDefinitions>
                                                 <StackLayout Grid.Column="1">
-                                                    <Label Text="{Binding Description}" VerticalTextAlignment="Center" Margin="0,10,0,0" />
+                                                    <Label Text="{Binding Description}" VerticalTextAlignment="Center"/>
                                                     <StackLayout Orientation="Horizontal">
                                                         <Label Text="Finish at:" FontSize="10" TextColor="Gray" />
                                                         <Label Text="{Binding FinishDateTask, StringFormat='{0:H:mm}'}" FontSize="10" TextColor="Gray" />
